--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
+@import url(css/__variables.css);
+
 *{
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
-    font-family: 'Gowun+Batang';
+    font-family: var(--gowun);
 }
 .color-yellow{
     color: #FFBF00;
@@ -19,6 +21,31 @@
 .back-gray{
     background-color: #E3E2E2;
 }
+.form-sub::before{
+    /* display: none; */
+    content: "";
+    background-color: #1a1517;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    opacity: 0.5;
+}
+.form-sub{
+    z-index: 3000;
+    display: none;
+}
+.form-submission{
+    width: 70%;
+}
+.form-submission p{
+    background-color: #FFF2CC !important;
+}
+.show-vehicle{
+    display: none;
+}
 .drop-menu{
     z-index: 10;
     width: 14%;
@@ -33,7 +60,7 @@
     background-color: rgba(230, 220, 220, 0.884);
 }
 .scroll-btn{
-    z-index: 2000;
+    z-index: 4000;
     bottom: 30px;
     right: 40px;
     width: 40px;
@@ -133,28 +160,28 @@
     z-index: -1;
     transform: translate(63%,60px);
 }
-.cust-service .col-5 p{
+.cust-service .col-lg-5 p{
     font-size: 17px;
 }
-.cust-service .col-5 span{
+.cust-service .col-lg-5 span{
     font-size: 30px;
     font-weight: 900;
     padding: 5px 12px;
 }
-.offers .col-2 i{
+.offers .col-lg-2 i{
     width: 60px;
     height: 58px;
 }
-.offers .col-2 i.fa-twitter{
+.offers .col-lg-2 i.fa-twitter{
     background-color: #36A4CF;
 }
-.offers .col-2 i.fa-google-plus-g{
+.offers .col-lg-2 i.fa-google-plus-g{
     background-color: #D41332;
 }
-.offers .col-2 i.fa-facebook-f{
+.offers .col-lg-2 i.fa-facebook-f{
     background-color: #365595;
 }
-.offers .col-4 .email-btn{
+.offers .col-lg-4 .email-btn{
     background-color: white;
     padding: 6px;
     margin-left: -4px;
@@ -239,4 +266,25 @@
     position: absolute;
     z-index: 4;
     transform: translate(-28px,110px);
+}
+
+@media (max-width:991px) {
+
+.cust-service .col-md-5 h3{
+    font-size: 18px;
+}
+.cust-service .col-md-5 span{
+    font-size: 20px;
+    font-weight: 900;
+    padding: 3px 8px;
+}
+.card-contact.col-md-11::before{
+    content: "";
+    background-color: #FFBF00;
+    width: 91.8%;
+    height: 8px;
+    position: absolute;
+    z-index: 4;
+    transform: translate(-28px,110px);
+}
 }
