--- a/index.css
+++ b/index.css
@@ -1,10 +1,8 @@
-@import url(css/__variables.css);
-
 *{
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
-    font-family: var(--gowun);
+    font-family: "Gowun+Batang";
 }
 .color-yellow{
     color: #FFBF00;
